sbuild (0.58.0-1) experimental; urgency=low

  [ Roger Leigh ]
  * New release.
  * debian/rules:
    - Clean up old unused code.
    - Correct patching of config.status and config.guess. 
  * debian/compat: Update to debhelper version 7.
  * debian/control:
    - Build-Depend on debhelper 7.
    - Build-Depend on libapt-pkg-dev and postgresql-server-dev
      (for PostgreSQL debversion type used by wanna-build).
    - postgresql-8.3-debversion: New package.
  * buildd-mail-wrapper: Use more portable BSD getloadavg in place of
    Linux-specific sysinfo.  Thanks to Robert Millan for this
    patch (Closes: #511095). 
  * wanna-build: --help output now documents --create-db, since --help
    now displays the full manual page (Closes: #511314).

  [ Kees Cook ]
  * lib/Sbuild.pm: always perform version checks on provided packages
    (Closes: #505747).

 -- Roger Leigh <rleigh@debian.org>  Mon, 02 Mar 2009 23:21:46 +0000

sbuild (0.57.5-1) unstable; urgency=low

  * New release.
  * Sbuild::Build::new: Check if 'DSC' exists rather than 'DSC File' to allow
    the .dsc to be in any directory (Closes: #489794).  Thanks to
    Francois-Denis Gonthier for this patch.
  * $Sbuild::Conf::apt_allow_unauthenticated: New configuration parameter
    to disable APT package authentication, which is now enabled by default
    (Closes: #492327).  Thanks to Enrico Zini for this patch.
  * Sbuild::Options: Use isin from Sbuild.pm (Closes: #492577).
  * Sbuild::Log: Add version number and correctly-formatted date to the
    package log name instead of a raw time_t (Closes: #493150).
    Additionally add user and architecture to the name.
  * Sbuild::Options: --make-binNMU no longer tries to assign an lvalue
    (Closes: #493325).  Thanks to Greg Hudson for this patch.
  * $maintainer_name, $uploader_name and $key_id are now optional in
    .sbuildrc; one is only required with performing binary NMUs for the
    entry in debian/changelog (Closes: #489557).